# solcast

./: .gitignore  .gitmodules  README.md  db.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
anchor/: Anchor.toml
anchor/programs/solcast/: Cargo.toml
anchor/programs/solcast/src/: lib.rs
anchor/src/: index.ts  solcast-exports.ts
anchor/tests/: solcast.spec.ts
src/app/: layout.tsx  page.tsx
src/app/creator/[id]/: page.tsx
src/app/solcast/: page.tsx
src/components/: create-post.tsx  post-feed.tsx  subscribed-creators.tsx  subscription-modal.tsx  trending-topics.tsx  wallet-connect.tsx
src/components/solcast/: solcast-data-access.tsx  solcast-feature.tsx  solcast-ui.tsx
src/components/subscription/: page.tsx
src/components/ui/: ui-layout.tsx
src/context/: WalletContext.tsx  Web3Context.jsx
src/services/: pinata.tsx
